# approval-service

./: .gitignore  .ruff.toml  AGENTS.md  DESIGN.md  Dockerfile  PLAN.md  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  database.py  main.py  models.py
app/api/v1/: approval_requests.py
app/core/: logging.py  security.py
app/schemas/: approval_requests.py
app/services/: approval_requests.py
migrations/: env.py
migrations/versions/: 2026_07_07_000000_0001_initial_schema.py
tests/: conftest.py  test_crud.py  test_idempotency.py  test_state_machine.py  test_tenant_isolation.py  test_validation.py
